# stock_emu_cheet

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  run_tests.py  stock_save_editor-v2.py  stock_save_editor.py
.claude/skills/build-and-deploy/: SKILL.md
.claude/skills/coding-principles/: SKILL.md
.github/workflows/: release.yml  test.yml
scripts/: build-cli.bat  build-gui.bat  build-gui.sh  build-tui.bat  clean.bat  clean.sh  dev.bat  dev.sh  run-cli.bat  run-cli.sh  run-gui.bat  run-gui.sh  run-tui.bat  run-tui.sh  test.bat  test.sh
src/: __init__.py
src-tauri/: .taurignore  Cargo.toml  pyproject.toml  tauri.bundle.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python/sse_gui/: __init__.py  __main__.py
src-tauri/src/: lib.rs  main.rs
src/cli/: __init__.py  cli.py
src/core/: __init__.py  calcs.py  cleanup_ops.py  constants.py  editor.py  player_ops.py  savemodel.py  saves.py  stock_ops.py
src/core/extra/: __init__.py  corporate_ops.py  market_ops.py  notice_ops.py
src/gui/: Tauri.toml  __init__.py  app.py  app_dev.py
src/gui/backend/: __init__.py  commands.py
src/gui/capabilities/: default.toml
src/gui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/gui/frontend/src/: App.tsx  api.ts  styles.css
src/gui/frontend/src/components/: EditPanel.tsx  ExtraBadge.tsx  ExtraPanel.tsx  SaveBar.tsx  StockList.tsx
src/tui/: __init__.py  app.py
src/tui/backend/: __init__.py  view_text.py
src/tui/frontend/: __init__.py  app.py
tests/: helpers.py  test_cli.py  test_core_batch.py  test_core_cleanup.py  test_core_extra.py  test_core_ops.py  test_core_saves.py  test_features.py  test_gui_commands.py  test_main.py  test_savemodel.py  test_v2_features.py
